c/src/test/resources/syntax/bad/NoStart.ctrl
<controlFile>
<sourceFile name="foo.c" id="1" />
<run><endPosition fileId="1" line="1"/></run>
</controlFile>
